--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Library</h1>
         </div>
         <div class="content">
-            <div class="library">
+            <div class="library" id="addhere">
                 <div class="library-book">
                     <div class="title">Title</div>
                     <div class="author">Author</div>
