--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
             <h1>Library</h1>
         </div>
         <div class="content">
+            <div class="temp-pop-up" id="temp-pop-up">
+                <h1>Welcome to the library!</h1>
+                <h2>Press the '+' to get started.</h2>
+            </div>
             <div class="library" id="addhere">
-                <div class="library-book">
+                <!-- <div class="library-book">
                     <div class="title">Title</div>
                     <div class="author">Author</div>
                     <div class="pageNo">23</div>
-                    <button class="read">Read</button>
-                    <button class="delete">Delete</button>
-                </div>
+                    <button class="read" onclick="readText()">Read</button>
+                    <button class="delete" onclick="deleteBook()">Delete</button>
+                </div> -->
             </div>
             <div class="bottom">
                 <button class="open-button" onclick="openForm()"><h1>+</h1></button>
